# catforge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.cloud.yml  docker-compose.yml
apps/api-server/: Dockerfile  alembic.ini  pyproject.toml
apps/api-server/alembic/: env.py
apps/api-server/alembic/versions/: 0001_baseline.py  0002_goal1_core_engine.py  0003_goal2_production_hardening.py  0004_tv_core3_mvp.py  0005_core3_real_data_foundation.py  0006_core3_real_data_source_registry.py  0007_core3_cleaning_quality.py  0008_core3_real_data_evidence.py  0009_core3_real_data_param_extraction.py  0010_core3_real_data_base_claim_activation.py  0011_core3_real_data_comment_evidence.py  0012_core3_real_data_comment_downstream_signal.py  0013_core3_real_data_claim_comment_enhancement.py  0014_core3_real_data_market_profile.py  0015_core3_real_data_sku_signal_profile.py  0016_core3_real_data_user_task.py  0017_core3_real_data_target_group.py  0018_core3_real_data_battlefield.py  0019_core3_real_data_claim_value_layer.py  0020_core3_real_data_candidate_recall.py  0021_core3_real_data_component_scoring.py  0022_core3_real_data_core3_selection.py  0023_core3_real_data_evidence_report.py  0024_core3_real_data_pipeline_governance.py  0025_core3_real_data_market_profile_legacy_fk.py  0026_core3_real_data_sku_business_profile.py  (+15 more)
apps/api-server/app/: __init__.py  main.py
apps/api-server/tests/: conftest.py  test_catforge_mvp.py  test_core3_mvp.py  test_goal1_core_engine.py  test_goal2_production_hardening.py  test_goal3_workbench.py
(+704 files in other folders)
