[project]
name = "catforge-api"
version = "0.1.0"
description = "CatForge / 品铸 category factory API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "celery>=5.3",
  "fastapi>=0.111",
  "httpx>=0.27",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "psycopg[binary]>=3.1",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
